--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@rushstack/eslint-patch": "^1.8.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.23.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.13.0",
     "prettier": "^3.2.5",
     "vite": "^5.3.1"
   }
