修改网站名

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://mypan.xin
-VITE_WEBSOCKET_URL=wss://mypan.xin/cable
+VITE_API_URL=https://mypan.tech
+VITE_WEBSOCKET_URL=wss://mypan.tech/cable
