--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
 VITE_API_URL=http://localhost:3000
 VITE_WEBSOCKET_URL=ws://localhost:3000/cable
-# VITE_API_URL=https://mypan.xin
-# VITE_WEBSOCKET_URL=wss://mypan.xin/cable
+CAPTCHA = 'a(zB$x8(3F'
